--- a/spotyfy-app/src/index.css
+++ b/spotyfy-app/src/index.css
@@ -11,3 +11,83 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+.left-b{
+  background-color: #000;
+  padding: 0 10px 0 25px !important;
+  min-height: 100vh;
+}
+
+.logo{
+  width: 130px;
+  height: 40px;
+  object-fit: contain;
+  margin-top: 25px;
+  cursor: pointer;
+}
+
+.list{
+  color: #b3b3b3;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+.list>div{
+  cursor: pointer;
+}
+
+.list>div:hover{
+  color: white;
+}
+
+.list>div:hover path{
+  fill: white;
+}
+
+.logo:hover path{
+  fill: white;
+}
+
+.right-b{
+  background-color: #121212;
+  padding-left: 30px!important;
+}
+
+.icon{
+  margin-right: 10px;
+}
+
+path{
+  fill: #b3b3b3;
+}
+
+.love{
+  background: linear-gradient(135deg,#450af5,#c4efd9);
+    border-radius: 2px;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.play{
+  background: #1fdf64;
+  border-radius: 2px;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
